# backend/docs/swagger.json
@@ -248,6 +248,11 @@
         },
         "/invitation/accept": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "accept inviteto workspace",
                 "consumes": [
                     "application/json"
@@ -288,6 +293,11 @@
         },
         "/invitation/decline": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "decline invite to workspace",
                 "consumes": [
                     "application/json"
@@ -326,9 +336,9 @@
                 }
             }
         },
-        "/invitation/revoke": {
-            "post": {
-                "description": "revoke invitation to workspace",
+        "/invitation/details": {
+            "get": {
+                "description": "get invitation details by token",
                 "consumes": [
                     "application/json"
                 ],
@@ -338,7 +348,45 @@
                 "tags": [
                     "WorkspaceInvitation"
                 ],
-                "summary": "revoke invitation to workspace",
+                "summary": "get invitation details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/invitation/revoke": {
+            "post": {
+                "description": "remove invitation to workspace",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WorkspaceInvitation"
+                ],
+                "summary": "remove invitation to workspace",
                 "parameters": [
                     {
                         "type": "string",
@@ -348,12 +396,12 @@
                         "required": true
                     },
                     {
-                        "description": "Revoke invitation Request",
+                        "description": "Remove invitation Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RevokeInvitationDTO"
+                            "$ref": "#/definitions/dto.RemoveInvitationDTO"
                         }
                     }
                 ],
@@ -986,6 +1034,17 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
+                }
+            }
+        },
+        "dto.RemoveInvitationDTO": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
                 }
             }
         },
